<resources>
    <string name="app_name">Taller 1</string>
    <string name="cuero">Cuero</string>
    <string name="cuerda">Cuerda</string>
    <string name="martillo">Martillo</string>
    <string name="ancla">Ancla</string>
    <string name="oro">Oro</string>
    <string name="oro_rosado">Oro rosado</string>
    <string name="plata">Plata</string>
    <string name="niquel">Niquel</string>
    <string name="cantidad">Cantidad de manillas</string>
    <string name="hint_cantidad">Ingrese la cantidad</string>
    <string name="material">Material</string>
    <string name="dije">Dije</string>
    <string name="tipo_dije">Tipo de dije</string>
    <string name="moneda">Moneda</string>
    <string name="dolar">Dolar</string>
    <string name="peso">Peso</string>
    <string name="obtener_valor">Obtener valor</string>
    <string name="error_cantidad">Digite la cantidad</string>
    <string name="error_seleccionar_material">Seleccione el material</string>
    <string name="error_seleccionar_dije">Seleccione el dije</string>
    <string name="error_seleccionar_tipo">Seleccione el tipo de dije</string>
    <string name="error_seleccionar_moneda">Seleccione la moneda</string>
    <string-array name="materiales">
        <item>@string/cuero</item>
        <item>@string/cuerda</item>
    </string-array>
    <string-array name="dijes">
        <item>@string/martillo</item>
        <item>@string/ancla</item>
    </string-array>
    <string-array name="tipos">
        <item>@string/oro</item>
        <item>@string/oro_rosado</item>
        <item>@string/plata</item>
        <item>@string/niquel</item>
    </string-array>
    <string-array name="moneda">
        <item>@string/dolar</item>
        <item>@string/peso</item>
    </string-array>
</resources>
